{
    "name": "Input Actions",
    "maps": [
        {
            "name": "Player",
            "id": "5cf77d97-2b03-44a9-b3bc-f23127e84cbf",
            "actions": [
                {
                    "name": "MouseDown",
                    "type": "Button",
                    "id": "c204d3a6-28a0-4614-afc2-d8d68811e510",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseUp",
                    "type": "Button",
                    "id": "1e8a2054-ec74-4090-b3f4-0cdeb0aa7c9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "56b5ce78-8a95-4e80-97a0-9f738baadb21",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d790a2bf-abc6-4945-91e7-4b8e4636084a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da649ea8-5cc3-4cc4-b330-806c9fe05aaf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eede9875-949f-445e-ac11-7341f047b899",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}